--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,37 +1,17 @@
-.App {
-  text-align: center;
-}
+.App { width: 100vw; height: auto; margin: 0; padding: 0; }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+.hide { display: none; }
+.overlay { z-index: 1; }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+/* Responsive Content */
+/* Default: any screen with screen wider than 1204px */ 
 
-.App-link {
-  color: #61dafb;
+@media only screen and (max-width: 768px) {
+  /* Mobile Phones */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media only screen and (max-width: 992px) {
+  /* Tablets */
 }
-
-.hide {
-  display: none;
+@media only screen and (max-width: 1204px) {
+  /* Small Laptops */
 }
