--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,17 +1,27 @@
 .App { width: 100vw; height: auto; margin: 0; padding: 0; }
 
+.center { text-align: center; }
 .hide { display: none; }
 .overlay { z-index: 1; position: relative; }
 
 /* Responsive Content */
 /* Default: any screen with screen wider than 1204px */ 
 
+.app-border { position: relative; width: 80vw; left: 10vw; }
+.app-border-top { top: 10vh; }
+
 @media only screen and (max-width: 768px) {
   /* Mobile Phones */
+  .app-border { position: relative; width: 90vw; left: 5vw; }
+  .app-border-top { top: 5vh; }
 }
 @media only screen and (max-width: 992px) {
   /* Tablets */
+  .app-border { position: relative; width: 90vw; left: 5vw; }
+  .app-border-top { top: 5vh; }
 }
 @media only screen and (max-width: 1204px) {
   /* Small Laptops */
+  .app-border { position: relative; width: 90vw; left: 5vw; }
+  .app-border-top { top: 5vh; }
 }
