--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,19 +9,27 @@
 
 .app-border { position: relative; width: 80vw; left: 10vw; }
 .app-border-top { top: 10vh; }
+.hide-lg { display: none }
+.hide-sm { display: block }
 
 @media only screen and (max-width: 768px) {
   /* Mobile Phones */
   .app-border { position: relative; width: 90vw; left: 5vw; }
   .app-border-top { top: 5vh; }
+  .hide-lg { display: block }
+  .hide-sm { display: none }
 }
 @media only screen and (max-width: 992px) {
   /* Tablets */
   .app-border { position: relative; width: 90vw; left: 5vw; }
   .app-border-top { top: 5vh; }
+  .hide-lg { display: block }
+  .hide-sm { display: none }
 }
 @media only screen and (max-width: 1204px) {
   /* Small Laptops */
   .app-border { position: relative; width: 90vw; left: 5vw; }
   .app-border-top { top: 5vh; }
+  .hide-lg { display: block }
+  .hide-sm { display: none }
 }
